--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
       </a-assets>
       <a-entity ply-model="src: #nug" 
                 rotation="-90 0 0"
-                position="5 0 5"></a-entity>
+                position="5 0 5">
+        <a-animation attribute="rotation" 
+                     repeat="indefinite" 
+                     to="-90 360 0" 
+                     direction="alternate"
+                     dur="3000"></a-animation>
+      </a-entity>
       <a-sky src="#sky"></a-sky> 
 <!--      color="#99ccff"-->
       <a-entity position="4.9 4 18" rotation="0 0 0">
